--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 </head>
 
 <body>
+    <canvas id="canvas" width="640" height="480">
+    </canvas>
 </body>
+
+<script src="app.js"></script>
 
 </html>
